[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Images/1616White.png" type="Texture" id=3]
[ext_resource path="res://Images/Cirno.png" type="Texture" id=4]
[ext_resource path="res://Scripts/PipeManager.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 384 )

[node name="World" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 112.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 32.0
theme = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
position = Vector2( 20, 0 )
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
position = Vector2( 0, -1.92593e-34 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
texture_scale = 10.9
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
light_mask = 2
texture = ExtResource( 4 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PipeManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Resetter" type="Area2D" parent="PipeManager"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeManager/Resetter"]
position = Vector2( -200, 0 )
shape = SubResource( 4 )

[node name="PipeInTimer" type="Timer" parent="PipeManager"]

[node name="BackgroundSprite" type="Sprite" parent="."]
modulate = Color( 0.211765, 0.247059, 0.258824, 1 )
position = Vector2( 184, 96 )
scale = Vector2( 42.75, 19 )
z_index = -1
texture = ExtResource( 3 )

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="area_entered" from="PipeManager/Resetter" to="PipeManager" method="_on_Resetter_area_entered"]
[connection signal="tree_entered" from="PipeManager/Resetter" to="PipeManager/Resetter" method="_on_Resetter_tree_entered"]
[connection signal="timeout" from="PipeManager/PipeInTimer" to="PipeManager" method="_on_PipeInTimer_timeout"]
